--- a/CampusNetCheckerService/CampusNetCheckerService.csproj
+++ b/CampusNetCheckerService/CampusNetCheckerService.csproj
@@ -8,5 +8,6 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.1" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 </Project>
