Modify docker image to actually work

--- a/CampusNetCheckerService/Dockerfile
+++ b/CampusNetCheckerService/Dockerfile
@@ -1,5 +1,9 @@
+## Base Setup
+FROM mcr.microsoft.com/dotnet/core/runtime:3.0 AS base
+WORKDIR /app
+
 ## Build
-FROM microsoft/dotnet:sdk AS build-env
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build
 
 WORKDIR /src
 COPY . .
@@ -7,8 +11,7 @@ COPY . .
 RUN dotnet publish -c Release -o /app/out
 
 ## Runtime
-FROM microsoft/dotnet:aspnetcore-runtime
-
-WORKDIR /app
-COPY --from=build-env /app/out .
+FROM base
+COPY --from=build /app/out .
 ENTRYPOINT [ "dotnet", "CampusNetCheckerService.dll" ]
+
